tp2/tp2/SensorAnalogico/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;C:\Users\Cris\Documents\Facu\Informatica Avanzada\tp2\SensorAnalogico
-d
C:\Users\Cris\Documents\Facu\Informatica Avanzada\tp2\SensorAnalogico\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Cris\Documents\Facu\Informatica Avanzada\tp2\SensorAnalogico\Alarma.java
<---- end of javadoc command ---->
Loading source file C:\Users\Cris\Documents\Facu\Informatica Avanzada\tp2\SensorAnalogico\Alarma.java...
Constructing Javadoc information...
C:\Users\Cris\Documents\Facu\Informatica Avanzada\tp2\SensorAnalogico\Sensor.java:11: error: unmappable character for encoding UTF-8
	 * El id siempre se guarda en may?sculas y sin espacios al inicio ni al final de la cadena.
	                                 ^
C:\Users\Cris\Documents\Facu\Informatica Avanzada\tp2\SensorAnalogico\Indicador.java:11: error: unmappable character for encoding UTF-8
	 * indica si este indicador est? activo o desactivo
	                               ^
C:\Users\Cris\Documents\Facu\Informatica Avanzada\tp2\SensorAnalogico\Indicador.java:12: error: unmappable character for encoding UTF-8
	 * @return true si est? activo, false si est? desactivado
	                      ^
C:\Users\Cris\Documents\Facu\Informatica Avanzada\tp2\SensorAnalogico\Indicador.java:12: error: unmappable character for encoding UTF-8
	 * @return true si est? activo, false si est? desactivado
	                                            ^
Standard Doclet version 1.7.0_45
Building tree for all the packages and classes...
Generating C:\Users\Cris\Documents\Facu\Informatica Avanzada\tp2\SensorAnalogico\doc\Alarma.html...
C:\Users\Cris\Documents\Facu\Informatica Avanzada\tp2\SensorAnalogico\Alarma.java:183: warning - @param argument "Lista" is not a parameter name.
C:\Users\Cris\Documents\Facu\Informatica Avanzada\tp2\SensorAnalogico\Alarma.java:166: warning - @param argument "Lista" is not a parameter name.
Generating C:\Users\Cris\Documents\Facu\Informatica Avanzada\tp2\SensorAnalogico\doc\package-frame.html...
Generating C:\Users\Cris\Documents\Facu\Informatica Avanzada\tp2\SensorAnalogico\doc\package-summary.html...
Generating C:\Users\Cris\Documents\Facu\Informatica Avanzada\tp2\SensorAnalogico\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\Cris\Documents\Facu\Informatica Avanzada\tp2\SensorAnalogico\doc\allclasses-frame.html...
Generating C:\Users\Cris\Documents\Facu\Informatica Avanzada\tp2\SensorAnalogico\doc\allclasses-noframe.html...
Generating C:\Users\Cris\Documents\Facu\Informatica Avanzada\tp2\SensorAnalogico\doc\index.html...
Generating C:\Users\Cris\Documents\Facu\Informatica Avanzada\tp2\SensorAnalogico\doc\stylesheet.css...
6 warnings
